<resources>
    <string name="app_name">WinState</string>
    <string name="goto_signup">Je n\'ai pas de compte, je veux m\'inscrire.</string>
    <string name="forgot_password">Mot de passe oublié?</string>
    <string name="votre_e_mail">Votre e-mail</string>
    <string name="goto_login">retour à la connexion</string>
    <string name="please_enter_email">Veuillez entrer votre adresse e-mail</string>
    <string name="reset_pass">Réinitialiser votre mot de passe</string>
    <string name="instructions_sent_by_email">Nous vous avons envoyé les instructions par e-mail</string>
    <string name="password_initialization_failed">Echec de l\'initialisation du mot de passe</string>
    <string name="description_reset_password">Afin de réinitialiser votre mot de passe, merci d\'entrer votre adresse e-mail et de cliquer sur le bouton. Vous recevrez alors les instructions par e-mail.</string>
    <string name="send_email">Email envoyé</string>
    <string name="failure">Echec de la suppression</string>

    //Edito d'accueille
    <string name="skip">SKIP</string>

    <string name="slide_1_title">Partagez</string>
    <string name="slide_1_desc">Le bonheur appartient à qui fait des heureux, décuplez le vôtre en le partageant.</string>

    <string name="slide_2_title">Participez</string>
    <string name="slide_2_desc">Proposez, votez, contaminez, ajoutez votre pierre à l\'édifice via Winlab et participer au mini jeux pierre feuille ciseau.</string>

    <string name="slide_3_title">Pierre</string>
    <string name="slide_3_desc">Pour jouer Pierre garde les deux yeux ouverts.</string>

    <string name="slide_4_title">Feuille</string>
    <string name="slide_4_desc">Pour jouer Feuille garde les deux yeux fermer.</string>

    <string name="slide_5_title">ciseau</string>
    <string name="slide_5_desc">Pour jouer Ciseau ferme un oeil</string>


    <string name="authfailed">L\'authentification à echoué.</string>
    <string name="registartion">Connexion en cours..</string>
    <string name="empties_fields">Veuillez remplir tout les champs</string>

    <string name="login_button_connexion">Se connecter</string>
    <string name="login_title">Connexion</string>
    <string name="login_user_email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="confirm_password">Confirmer le mot de passe</string>
    <string name="create_account">Créer un compte</string>
    <string name="please_fill_email">Veuillez remplir l\'email</string>
    <string name="please_fill_password">Veuillez remplir le mot de passe</string>
    <string name="please_fill_password_confirm">Veuillez confirmer le mot de passe</string>
    <string name="authentication_failed">Echec de l\'authentification</string>
    <string name="welcome">Bienvenu !</string>
    <string name="reset_password">Mot de Passe oublié? Réinitialisez le mot de passe.</string>

    <string name="tab_text_1">Contact</string>
    <string name="tab_text_2">Ajout contact</string>

    <!-- FaceTracker -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <array name="spinnerGender">
        <item>Homme</item>
        <item>Femme</item>
        <item>Enfant</item>
        <item>Renne de Santa Nora</item>
    </array>
</resources>
