<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="15dp"
    tools:context="fr.wildcodeschool.kelian.winstate.UI.ResetPassword">

    <TextView
        style="@style/subtitle"
        android:id="@+id/tv_title_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/forgot_password"/>

    <TextView
        android:id="@+id/tv_description_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="center_horizontal"
        android:text="@string/description_reset_password"/>

    <EditText
        android:id="@+id/et_reset_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:gravity="center_horizontal"
        android:hint="@string/votre_e_mail"/>

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:text="@string/reset_pass"/>

    <TextView
        android:id="@+id/tv_reset_goto_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/goto_login"/>



</LinearLayout>
